Bug Fixes
Bugs Fixed: Array wold be messed up if end time was in the AMs.

Color of slot would not reset if people entered was 0

--- a/synccircle/src/components/Group-UserPage/UserPageOverhaul.css
+++ b/synccircle/src/components/Group-UserPage/UserPageOverhaul.css
@@ -186,7 +186,8 @@ height: 53px;
     grid-template-rows: repeat(24, 1fr);
     flex-grow: 1;
     place-items: center;
-    overflow-y: auto;
+    min-height: 0;
+    overflow-y: scroll;
 }
 
 .UnselectedSlot {
